# HMS_BLE

./: CMakeLists.txt  HMS_BLE.conf  README.md  library.json
examples/ESP32-C3_Enviornmental_Sensor/: platformio.ini
examples/PlatformIo/Arduino/ESP32-C3_Enviornmental_Sensor/: platformio.ini
examples/PlatformIo/Arduino/ESP32-C3_Enviornmental_Sensor/src/: main.cpp
examples/nRF_Connect/nRF52/nRF52-832_Enviornmental_Sensor/: CMakeLists.txt  README.md  prj.conf  setup.ps1  west.yml
examples/nRF_Connect/nRF52/nRF52-832_Enviornmental_Sensor/src/: main.cpp
include/: HMS_BLE.h
src/: HMS_BLE.cpp  HMS_BLE.h  HMS_BLE_ARDUINO_ESP32.cpp
src/ESP32/: HMS_BLE_ARDUINO_ESP32.cpp
src/Template/: HMS_BLE_PLATFORM_CONTROLLER_TEMPLATE.cpp
src/nRF/: HMS_BLE_ZEPHYR_nRF.cpp
